2016-12-18	"The best prophet of the future is the past."  (2)

		.travis.yml :
		- added back armv4-linux-gnueabi test configuration
		- added (back) x86-32 test configurations with g++ (and gcc)

		README.md :
		- removed compiler crash description -- was likely caused by
		  ohai.h, which is now removed

		include/innocent-pear/omg.h :
		- fixed typo that caused armv4 compilation to fail

2016-12-17	More loops.

		include/innocent-pear/omg.h :
		- fixed randomization for omg<..., 0>
		- added finite loops for omg<..., {non-zero}>

		share/innocent-pear/doge-i.h :
		- innocent_pear_CHAFF(.) now uses default number of layers of
		  scrambling -- and does it 3 times

2016-12-16	"The best prophet of the future is the past."

		include/innocent-pear/omg.h :
		- unified treatment of omg<...>::omg() and omg<...>::omg(...)

		include/innocent-pear/tfw.h :
		- rewrote tfw<...>::operator!()

2016-12-12	"I shot an arrow in to the air, and it stuck."  (9)

		include/innocent-pear/yarly.h :
		- added yarly<...>::wut(...), for later use

		include/innocent-pear/host/rly.h :
		- added rly<...>::wut(...), for later use

2016-12-04	Loops.

		include/innocent-pear/kthxbai.h :
		- added (finite) loops

		include/innocent-pear/omg.h :
		- on x86-32 and x86-64, `verr' and `verw' are now always
		  eligible

		include/innocent-pear/bbq.h :
		- removed innocent_pear::ops::allow_emulator_unsafes
		- added do_op_rept(...) and do_inv_op_rept(...)

2016-11-27	Commit CCCXXXIII.

		include/innocent-pear/omg.h :
		- for x86-32 and x86-64, may now issue `verr', `verw', `sldt',
		  `sgdt', and/or `sidt' instructions
		- redistributed probabilities

2016-11-25	"I shot an arrow in to the air, and it stuck."  (8)

		configure ,
		GNUmakefile ,
		bin/innocent-pear-front-end.tcc :
		- now try to test for and use `-fwritable-strings' clang++
		  option when compiling the doge-??.cc modules

		include/innocent-pear/bbq.h :
		- removed use of optimize(.) attributes

		share/innocent-pear/doge-i.h :